# pybudget

./: .editorconfig  .gitignore  main.py  pyproject.toml
src/: consts.py  exceptions.py
src/accounting/: enums.py  managers.py  models.py
src/accounting/managers/: accounts.py  base.py  categories.py  transactions.py
src/core/: consts.py  logger.py
src/resources/: core.py  down.py  up.py
src/resources/config/: manager.py
src/resources/database/: manager.py
src/resources/database/api/: accounts.py  categories.py  migrations.py  transactions.py
src/resources/database/migrations/: base.py  initial.py
src/resources/database/migrations/migrations_items/: 001.py  002.py  003.py
src/ui/: screens.py  ui_app.py
src/ui/screens/: accounts.py  transactions.py  warnings.py
src/utils/: converters.py  decorators.py  file_utils.py
tests/test_managers/: test_config_manager.py  test_database_manager.py
tests/test_utils/: test_file_utils.py
